# BME-Project

./: .gitignore  README.md  todo.txt  todo.txt~
.github/workflows/: ci.yml
gpio_lab/: CMakeLists.txt  prj.conf  sim.prj.conf  sim.proj.conf  test.prj.conf
gpio_lab/boards/: native_sim.overlay.in
gpio_lab/gpio_tests/: test.txt
gpio_lab/src/: main.c  test_state_machine.c
gpio_lab/testing/: bme554_lib.c  bme554_lib.h  gpio_test.c  gpio_test.h  macro_plan.txt  test.txt  test_gpio_plan.txt  test_state_machine.c  test_state_machine.h
gpio_tests/gpio-lab/: metadata.yml
gpio_tests/gpio-lab/application/boards/: nrf52833dk_nrf52833.overlay
gpio_tests/gpio-lab/application/src/: main.c
led_button_tests/: CMakeLists.txt  TESTING_EXPLANATION.md  TESTING_QUICK_REFERENCE.md  prj.conf  test.prj.conf
led_button_tests/boards/: native_posix.overlay
led_button_tests/src/: main.c  test_button_callback.c  test_button_callback.h
led_freq_tests/: CMakeLists.txt  prj.conf  test.prj.conf
led_freq_tests/boards/: native_posix.overlay
led_freq_tests/src/: main.c  test_button_callback.c  test_button_callback.h  test_led_blink.c
led_tests/: CMakeLists.txt  prj.conf
led_tests/boards/: native_posix.overlay
led_tests/src/: main.c
scripts/: extract_led_aliases.py  generate_overlay.py  style.py
